fixed scrolling behaviour on mobile devices
fixes #12

--- a/src/web/css/level2.css
+++ b/src/web/css/level2.css
@@ -14,7 +14,6 @@ html,
 body {
   font-family: 'Patrick Hand SC', sans-serif;
   font-size: 18px;
-  height: 100%;
   overflow-x: hidden;
 }
 .well {
